samples/_failures_safe/1761162642_51a1fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_091666f3.c: In function ‘main’:
./samples/SAFE/__tmp_091666f3.c:201:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  201 |     int token_count
      |     ^~~
./samples/SAFE/__tmp_091666f3.c:201:5: error: expected declaration or statement at end of input
